--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <img src="./images/hartstad.jpg" style="width: 100px;">
         <img src="./images/logo.jpg">
     </header>
     <section id="home">
@@ -55,16 +56,40 @@
             <div class="flex-container center-y">
                 <div class="flex-container-item flex-top-item">
                     <div class="text-container">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum porta faucibus velit ac tincidunt. Nunc quis arcu sit amet augue pulvinar facilisis vel a arcu. In scelerisque purus massa, eu luctus sem suscipit et. Pellentesque odio nisl, fringilla eget ante quis, tempus mattis libero. Mauris tincidunt, sem at sodales imperdiet, diam diam tristique neque, sit amet vehicula risus leo et orci. Integer sed orci leo. Fusce feugiat eu est sit amet dictum. Duis nec erat vel nisl pulvinar aliquam. Pellentesque vitae lacinia sapien. <br><br> Sed lobortis dui consectetur ligula venenatis efficitur. Vestibulum aliquam, magna ac egestas consectetur, erat nulla molestie felis, id lobortis diam sapien at arcu. Sed ex magna, blandit sed nisi ac, interdum tincidunt dui. Phasellus eget scelerisque elit. Donec vel magna in felis efficitur pulvinar. Praesent sit amet fermentum magna, eget tincidunt nunc. Pellentesque purus turpis, imperdiet et nisi vitae, facilisis fringilla orci. Ut et consequat tellus.</p>
+                        <h1>Het Zwolse Bordspel</h1>
+                        <br>
+                        <p>€ 19,95</p>
+                        <br>
+                        <p>Dit spel is geschikt voor gezinnen en vriendgroepen. Leer de leukste plekken van Zwolle kennen en ga de strijd met elkaar aan. Speel nu!</p>
+                        <br>
+                        <button style="padding: 10px 20px; border: 1px solid black; background-color: white;">Speel Nu</button>
                     </div>
                 </div>
                 <div class="flex-container-item center-x">
                     <div class="image-container">
-                        <img src="./images/zwolle3.JPG">
+                        <img src="./images/Bordspel.jpg">
                     </div>
                 </div>
             </div>
+            <div class="criticism">
+                <h1>Beoordelingen</h1>
+                <div class="criticism-container">
+                    <div class="criticism-item">
+                        <img src="./images/pfp.jpg">
+                        <h4 class="bold">Jan Rooshoek</h4>
+                        <p>Als ouder vind ik het Zwolse bordspel is een fantastische manier om tijd met mijn gezin door te brengen. Het spel neemt ons mee op ontdekkingsreis door Zwolle, waarbij zowel bekende als verborgen plekjes tot leven komen. </p>
+                    </div>
+                    <div class="criticism-item">
+                        <img src="./images/pfp.jpg">
+                        <h4 class="bold">Eva ter Ham</h4>
+                        <p>Mijn kinderen zijn dolenthousiast als ze bij de vragenkaartjes belanden en hun kennis kunnen testen met de leuke vragen. Ook ik leer nieuwe feitjes over de stad die ik nog niet kende.</p>
+                    </div>
+                </div>
+            </div>  
+            <div class="mock-form">
+                <input type="text">
+            </div>
         </div>
-    </section>    
+    </section>
 </body>
 </html>
