--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" href="./images/minicon.jpg">
+    <title>Het Zwolse Bordspel</title>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
@@ -71,6 +73,9 @@
                     </div>
                 </div>
             </div>
+            <div style="margin-bottom: 70px">
+                <img src="./images/spel.png" style="width: 100%; border-radius: 20px;">
+            </div>  
             <div class="criticism">
                 <h1>Beoordelingen</h1>
                 <div class="criticism-container">
@@ -85,11 +90,61 @@
                         <p>Mijn kinderen zijn dolenthousiast als ze bij de vragenkaartjes belanden en hun kennis kunnen testen met de leuke vragen. Ook ik leer nieuwe feitjes over de stad die ik nog niet kende.</p>
                     </div>
                 </div>
-            </div>  
+            </div>
+            <div class="slideshow">
+                <div class="slide">
+                    <img src="./images/bord sfeer.png" style="width:100%">
+                  </div>
+                  
+                  <div class="slide">
+                    <img src="./images/bordspel sfeer.png" style="width:100%">
+                  </div>
+                
+            </div>
+            <div style="text-align:center">
+                <span class="dot"></span> 
+                <span class="dot"></span> 
+              </div>
             <div class="mock-form">
-                <input type="text">
+                <div class="mock-form-container">
+                    <div class="mock-form-item">
+                        <h1 style="margin: 0; margin-bottom: 10px;">Neem contact op</h1>
+                        <p>(123) 456-7890</p>
+                        <p style="margin-bottom: 30px;">hi@mygroovydomain.com</p>
+                        <p>123 Voorbeeldstraat</p>
+                        <p>San Francisco, CA 12345</p>
+                        <a href="https://www.instagram.com/zwols.bordspel/" target="_blank" style="width: 200px; display: flex; flex-direction: row; align-items: center; gap: 5px">
+                            <img src="./images/instagram.webp" style="width: 40px;">
+                            <p style="margin: 0;">@zwols.bordspel</p>
+                        </a>
+                    </div>
+                    <div class="mock-form-item mock-form-input">
+                        <div>
+                            <label for="name">Naam</label>
+                            <input name="name" type="text" placeholder="Typ hier uw naam...">
+                        </div>
+                        <div>
+                            <label for="email">E-Mail</label>
+                            <input name="email" type="email" placeholder="Typ hier uw E-Mail...">
+                        </div>
+                        <div>
+                            <label for="message">Bericht</label>
+                            <textarea name="message" placeholder="Typ hier uw bericht..."></textarea>
+                        </div>
+                        <button style="padding: 10px; background-color: white; border:1px solid black">Verstuur</button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+    <footer>
+        <h1 style="margin-bottom: 20px">Het Zwolse Bordspel</h1>
+        <div>
+            <img src="./images/logo.jpg" style="width: 200px">
+            <img src="./images/hartstad.jpg">
+        </div>
+        <p>In samenwerking met FEAT en Hartstad Zwolle</p>
+    </footer>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
